--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="common_error">Something went wrong. Please try again later.</string>
+
     <string name="app_name">GitHub</string>
 
     // LoginScreen
@@ -6,4 +8,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
+    <string name="empty_username_message">Please enter an username.</string>
+    <string name="invalid_username_message">Please enter a valid username.</string>
+    <string name="username_not_found_error">Username was not found.</string>
 </resources>
