--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="app_name">GitHub</string>
 
     // LoginScreen
-    <string name="git_hub_logo">GitHub logo</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
@@ -12,5 +11,8 @@
     <string name="invalid_username_message">Please enter a valid username.</string>
     <string name="username_not_found_error">Username was not found.</string>
 
-    <string name="no_repos_available">No repositories available.</string>
+    // ProfileScreen
+    <string name="own_repos">Own repositories</string>
+    <string name="no_own_repos_available">No own repositories available</string>
+    <string name="logout">Logout</string>
 </resources>
