--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="no_starred_repos_available">No starred repositories available</string>
     <string name="starred_update_error">Unable to update starred for repo with id = %1$s.</string>
     <string name="logout">Logout</string>
+
+    // UserScreen
+    <string name="followers">Followers: %1$s</string>
+    <string name="following">Following: %1$s</string>
+    <string name="no_starred_repos_available">No starred repositories available</string>
 </resources>
