--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="own">Own</string>
     <string name="own_repos">Own repositories</string>
     <string name="no_own_repos_available">No own repositories available</string>
+    <string name="no_repos_available">No repositories available</string>
     <string name="starred">Starred</string>
     <string name="starred_repos">Starred repositories</string>
     <string name="no_starred_repos_available">No starred repositories available</string>
