Show a "not implemented" informative message for "followers" button.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="followers">Followers: %1$s</string>
     <string name="following">Following: %1$s</string>
     <string name="unable_to_fetch_user">Unable to fetch user.</string>
+    <string name="following_not_implemented">Not implemented. Try with "followers" button.</string>
 
     // SearchScreen
     <string name="search">Search</string>
