--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
 
     // SearchScreen
     <string name="search">Search</string>
-    <string name="next">Next</string>
+    <string name="more">More</string>
     <string name="no_results_found">No results found.</string>
     <string name="unable_to_search">Unable to search.</string>
     <string name="no_followers_found">No followers found.</string>
