--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="forbidden_error">Too many public API Requests.</string>
+    <string name="no_internet_connection_error">No internet connection available.</string>
     <string name="common_error">Something went wrong. Please try again later.</string>
     <string name="not_found_error">Not found.</string>
     <string name="unable_to_fetch_repos">Unable to fetch repos.</string>
